--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <!-- <script src="https://tetoki.eu/vida/vida/p5.vida.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script> -->
-    <!-- <script src="./main.js"></script> -->
+    <script src="./assets/js/main.js"></script>
     <!-- <script src="./vida.js"></script> -->
     <!-- <script src="./main2.js"></script>
     <script src="./libraries/seriously.js"></script>
@@ -27,30 +27,30 @@
 <body>
     <header>
         <a href="https://www.charlescon.com" target="_blank">
-            <img id="eye" src="./assets/eye.webp" alt="eye logo"/>
+            <img id="eye" src="./assets/images/eye.webp" alt="eye logo"/>
         </a>
         <h1>Videodrome</h1>
         <button id="infoBtn">
-            <img id="info" src="./assets/info.png" alt="info"/>
+            <img id="info" src="./assets/images/info.png" alt="info"/>
         </button>
     </header>
     <main>
         <div id="exampleCont">
             <a class="example" href="./dots.html">
-                dots
-                <img src="" alt=""/>
+                <img class="thumbnail" id="dots" src="./assets/images/dots.jpeg" alt="motion detection dots"/>
+                Motion Detection - Dots
             </a>
             <a class="example" href="./orbs.html">
-                orbs
-                <img src="" alt=""/>
+                <img class="thumbnail" id="orbs" src="./assets/images/orbs.jpeg" alt="motion detection orbs"/>
+                Motion Detection - Orbs
             </a>
             <a class="example" href="">
-                three
-                <img src="" alt=""/>
+                <img class="thumbnail" id="none" src="" alt=""/>
+                Placeholder
             </a>
             <a class="example" href="">
-                four
-                <img src="" alt=""/>
+                <img class="thumbnail" id="none" src="" alt=""/>
+                Placeholder
             </a>
         </div>
     </main>
