--- a/orbs.html
+++ b/orbs.html
@@ -21,11 +21,11 @@
 <body>
     <header>
         <a href="https://www.charlescon.com" target="_blank">
-            <img id="eye" src="./assets/eye.webp" alt="eye logo"/>
+            <img id="eye" src="./assets/images/eye.webp" alt="eye logo"/>
         </a>
         <h1>Videodrome</h1>
         <a href="./">
-            <img id="info" src="./assets/home.png" alt="eye logo"/>
+            <img id="info" src="./assets/images/home.png" alt="eye logo"/>
         </a>
     </header>
 </body>
