grid drawings added

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <img class="thumbnail" id="orbs" src="./assets/images/orbs.jpeg" alt="motion detection orbs"/>
                 Motion Detection - Orbs
             </a>
-            <a class="example" href="">
+            <a class="example" href="./notes.html">
                 <img class="thumbnail" id="none" src="" alt=""/>
-                Placeholder
+                Grid System - Sticky Notes
             </a>
-            <a class="example" href="">
+            <a class="example" href="./normal.html">
                 <img class="thumbnail" id="none" src="" alt=""/>
-                Placeholder
+                Grid System - Normal
             </a>
         </div>
     </main>
