grid drawings added

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 Motion Detection - Orbs
             </a>
             <a class="example" href="./notes.html">
-                <img class="thumbnail" id="none" src="" alt=""/>
+                <img class="thumbnail" id="notes" src="./assets/images/notes.jpeg" alt=""/>
                 Grid System - Sticky Notes
             </a>
             <a class="example" href="./normal.html">
-                <img class="thumbnail" id="none" src="" alt=""/>
+                <img class="thumbnail" id="normal" src="./assets/images/normal.jpeg" alt=""/>
                 Grid System - Normal
             </a>
         </div>
